# mysunny

./: Dockerfile  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
.github/workflows/: sunny-tis.yml
SAVE/: E2P_CENTER_DLG.bsd  E2P_DEMDLG.bsd  E2P_MEASUREMENT_100.bsd  E2P_MEASUREMENT_101.bsd  E2P_MEASUREMENT_102.bsd  E2P_MEASUREMENT_103.bsd  E2P_MEASUREMENT_104.bsd  E2P_MEASUREMENT_105.bsd  E2P_MEASUREMENT_106.bsd  E2P_MEASUREMENT_107.bsd  E2P_MEASUREMENT_108.bsd  E2P_P_DATA_DLG.bsd  E2P_P_DATA_SET_DLG.bsd  E2P_ROBOT_DLG.bsd  E2P_TASK_NUM_DLG.bsd
install/: local_setup.sh  setup.sh
install/camera_test/include/camera_test/: camera_test.hpp
install/camera_test/lib/camera_test/: camera_test_node
install/camera_test/share/camera_test/: local_setup.dsv  local_setup.sh  package.dsv  package.sh
install/camera_tis/include/camera_tis/: camera_tis.hpp
install/camera_tis/lib/camera_tis/: camera_tis_node
install/camera_tis/share/camera_tis/: local_setup.sh  package.dsv  package.sh  package.xml
install/cloud_result_tcpip/include/cloud_result_tcpip/: cloud_result_tcpip.hpp
install/cloud_result_tcpip/lib/cloud_result_tcpip/: cloud_result_tcpip_node
install/cloud_result_tcpip/share/cloud_result_tcpip/: local_setup.dsv  local_setup.sh  package.dsv  package.sh
install/config_tis/lib/config_tis/: config_tis_node
install/config_tis/share/config_tis/: package.dsv  package.sh  package.xml
install/gpio_raspberry/include/gpio_raspberry/: gpio_raspberry.hpp
install/gpio_raspberry/lib/gpio_raspberry/: gpio_raspberry_node
install/gpio_raspberry/share/gpio_raspberry/: local_setup.sh  package.dsv  package.sh
install/image_result_tcpip/lib/image_result_tcpip/: image_result_tcpip_node
log/: latest_build
src/camera_test/: CMakeLists.txt  package.xml
src/camera_test/bmp/: test108.avi
src/camera_test/include/camera_test/: camera_test.hpp
src/camera_test/src/: camera_test.cpp
src/camera_tis/: CMakeLists.txt  README.md  package.xml
src/camera_tis/config/: params.yaml
src/camera_tis/src/: E2camData.cpp  camera_tis.cpp
src/cloud_result_tcpip/: CMakeLists.txt  package.xml
src/cloud_result_tcpip/src/: TCPClient.cpp  TCPServer.cpp  cloud_result_tcpip.cpp
src/config_tis/: README.md  setup.cfg  setup.py
src/config_tis/config/: .params.yaml  params.yaml
src/config_tis/config_tis/: config_tis_node.py
src/gpio_raspberry/src/: gpio_raspberry.cpp
src/image_result_tcpip/: CMakeLists.txt  package.xml
src/image_result_tcpip/src/: TCPServer.cpp  image_result_tcpip.cpp
src/image_tcpip/: CMakeLists.txt  package.xml
src/image_tcpip/launch/: main.launch.py
src/image_tcpip/src/: TCPClient.cpp  TCPServer.cpp  image_tcpip.cpp
src/laser_imagepos/: CMakeLists.txt  package.xml
src/laser_imagepos/config/: params.yaml
src/laser_imagepos/launch/: main.launch.py
src/laser_imagepos/src/: alg100_runimage.cpp  alg101_runimage.cpp  alg102_runimage.cpp  alg103_runimage.cpp  alg104_runimage.cpp  alg105_runimage.cpp  alg106_runimage.cpp  alg107_runimage.cpp  alg108_runimage.cpp  laser_imagepos.cpp  myhalcv2.cpp
src/laser_line_center/: CMakeLists.txt  README.md  package.xml
src/laser_line_center/config/: params.yaml
src/laser_line_center/include/impl/: center.hpp
src/laser_line_center/include/laser_line_center/: laser_line_center.hpp
src/laser_line_center/src/: laser_line_center.cpp
src/laser_line_center/test/: CMakeLists.txt  black.cpp  empty.cpp  ksize.cpp  perf.cpp  producer_consumer_manager.cpp  small.cpp  threshold.cpp  white.cpp  width.cpp
src/laser_line_filter/: CMakeLists.txt  README.md
src/laser_line_filter/src/: laser_line_filter.cpp
src/laser_line_filter/test/: CMakeLists.txt  average.cpp  interpolate.cpp  length.cpp
src/line_center_reconstruction/: CMakeLists.txt  README.md  package.xml
src/line_center_reconstruction/src/: E2centerData.cpp  FileOut.cpp  TimeFunction.cpp  line_center_reconstruction.cpp
src/modbus/: CMakeLists.txt  README.md  package.xml
src/modbus/config/: params.yaml
src/modbus/include/TCP/: TCPServer.h  TCPServer2.h  XTcp.h
src/modbus/include/fileout/: E2proomData.h  calibration.h
src/modbus/include/json/: jsonfuction.h
src/modbus/include/modbus/: modbus.hpp
src/modbus/launch/: main.launch.py
src/modbus/src/: E2proomData.cpp  E2proomData_als100.cpp  E2proomData_als101.cpp  E2proomData_als102.cpp  E2proomData_als103.cpp  E2proomData_als104.cpp  E2proomData_als105.cpp  E2proomData_als106.cpp  E2proomData_als107.cpp  E2proomData_als108.cpp  TCPClient.cpp  TCPServer.cpp  TCPServer2.cpp  XTcp.cpp  calibration.cpp  jsonfuction.cpp  modbus.cpp  modbus_als100.cpp  modbus_als101.cpp  modbus_als102.cpp  modbus_als103.cpp  modbus_als104.cpp  modbus_als105.cpp  modbus_als106.cpp  modbus_als107.cpp  modbus_als108.cpp  modbus_craft.cpp
src/modbus/test/: CMakeLists.txt  bandwidth-client.c  bandwidth-server.c  client.cpp  server.cpp
src/my_pclout/: CMakeLists.txt  package.xml
src/my_pclout/include/fileout/: MyPlcFunction.h  TimeFunction.h  calibration.h
src/my_pclout/include/my_pclout/: my_pclout.hpp
src/my_pclout/launch/: main.launch.py
src/my_pclout/src/: MyPlcFunction.cpp  TimeFunction.cpp  calibration.cpp  my_pclout.cpp
src/pipeline_tis/: README.md  package.xml
src/pipeline_tis/launch/: main.launch.py
src/rotate_image/: CMakeLists.txt  README.md  package.xml
src/rotate_image/include/rotate_image/: rotate_image.hpp
src/rotate_image/launch/: main.launch.py
src/rotate_image/src/: rotate_image.cpp
src/seam_tracking/seam_tracking/: seam_tracking_node.py
src/seam_tracking/test/: test_numpy.py
src/tutorial_interfaces/: CMakeLists.txt
src/tutorial_interfaces/msg/: IfAlgorhmitcloud.msg  IfAlgorhmitmsg.msg  IfAlgorhmitpoint2f.msg  IfAlgorhmitroblinecloud.msg  IfAlgorhmitrobpoint3f.msg  IfAlgorhmittargetpoint2f.msg  IfAlgorhmittargetrobpoint3f.msg
tools/ros2_numpy/: __init__.py
tools/seam_tracking_gui/: custom_dialog.py  custom_figure.py  main.py  perspect.py  point_data.py  ros_node.py
tools/seam_tracking_gui/test/: test_perspect.py  test_ros_node.py
(+170 files in other folders)
